--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-pandas~=1.2.4
-numpy>=1.20.3
-matplotlib~=3.4.2
-scikit-learn~=0.24.2
-javabrigde>=1.0.16
-python-weka-wrapper3>=0.2.3
-mysqlclient~=2.0.3
-mininet~=2.3.0.dev6
-liac-arff>=2.5.0
-sympy~=1.8
-setuptools~=57.0.0
-z3-solver>=4.8.12.0
 iteround~=1.0.3
+liac-arff>=2.5.0
+matplotlib~=3.4.2
+mininet~=2.3.0.dev6
+mysqlclient~=2.0.3
+numpy>=1.20.3
+pandas~=1.2.4
+pexpect~=4.8.0
+setuptools~=57.0.0
+sympy~=1.8
+z3-solver>=4.8.12.0
