--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+appdirs~=1.4.4
 iteround~=1.0.3
 liac-arff>=2.5.0
 matplotlib~=3.4.2
@@ -6,6 +7,9 @@ mysqlclient~=2.0.3
 numpy>=1.20.3
 pandas~=1.2.4
 pexpect~=4.8.0
+python-javabridge>=4.0.0
+python-weka-wrapper3>=0.2.5
 setuptools~=57.0.0
 sympy~=1.8
 z3-solver>=4.8.12.0
+configparser~=5.2.0
