refactor: change budget calculation
This commit main aim is to change how the budget is calculated, according to the updated approach.

[+] Add possibility to add budget to each individual rules. Add several getters and setters as well.
[+] Add allowed scenarios in help message of the positional argument 'scenario'

[~] Change budget calculation method.
[~] Change how experimenter class looks for the presence of the scenario functions.
[~] Change how directories for onos are accessed. (reduced the number of variable in configuration file)
[~] Change ruleset confidence calculation so it can now calculate the confidence of a rule, relatively to the other rules with the same class.
[~] Change stats.py to accommodate the changes in the Learner class and Experimenter Class.
[~] Move rdfl_exp.machine_learner.algorithms to rdfl_exp.experiments.learner.
[~] Refactor algorithms.py (now learner.py) to be a class instead.
[~] Update numpy version in requirements.txt.

[~] Fix  issue in experiments.data.py where an exception would be raised if 'known_reason' was used as the target class
[~] Fix issue in csv.py#to_arff function where the error attribute.

--- a/etc/rdfl_exp.cfg
+++ b/etc/rdfl_exp.cfg
@@ -5,7 +5,7 @@
 # ===== Logging ===========================================================================
 
 [general]
-# Whether or not a cleanup should be performed when the rdfl_exp finishes
+# Whether or not a cleanup should be performed when rdfl_exp finishes
 cleanup = True
 
 # ===== Logging ===========================================================================
@@ -29,9 +29,11 @@ level = TRACE
 # ===== Fuzzer ====================================================================
 
 [fuzzer]
-# Log level of the logfile. Default to "INFO".
+# Port to connect to the fuzzer
 port = 52525
+# Location of the fuzzer instruction file
 instr_path = /etc/packetfuzzer/fuzzer_instr.json
+# Location of the Fuzzer jar file
 jar_path = /home/ubuntu/cff/out/artifacts/PacketFuzzer_jar/PacketFuzzer.jar
 
 # ===== SDN Controllers ====================================================================
@@ -39,9 +41,7 @@ jar_path = /home/ubuntu/cff/out/artifacts/PacketFuzzer_jar/PacketFuzzer.jar
 [onos]
 # Location of the root directory of onos
 root_dir = /opt/onos
-# Location of the root directory of onos
-karaf_dir = /opt/onos/karaf/
-log_dir = /opt/onos/karaf/data/log
+# Password to ssh into karaf. Default to "karaf"
 karaf_password = karaf
 # IP address used by the controller
 host = 127.0.0.1
@@ -53,6 +53,16 @@ rest_port = 8181
 web_user = onos
 # Password used to connect to the Northbound API. Default to "rocks"
 web_password = rocks
+
+[ryu]
+# Location of the log directory of RYU
+log_dir = ~/.cache/ryu/log
+# Log level to be used for RYU
+log_level = 10
+# IP address used by the controller
+host = 127.0.0.1
+ # Port used by the SDN switches. Default to "6653"
+port = 6653
 
 # ===== MySQL Database ======================================================================
 
