refactor!: remove need for having admin permissions
This commit removes the need for using sudo while using rdfl_exp. There were many permissions issues and hacks to do when using sudo, this commit aim is to simplify all. Also remove hard-coding of sudo password

[~] Change mininet_driver.py and onos_driver.py to use sudo in their commands.
[~] Small refactor of code to accommodate not using sudo anymore
[~] Fix erroneous implementation of exit_codes.py

BREAKING CHANGE: Having root permissions is no longer required, however, a sudo password should be created, password-less sudo permissions given to the user or sudo password being given at the beginning of the script

--- a/etc/rdfl_exp.cfg
+++ b/etc/rdfl_exp.cfg
@@ -7,6 +7,9 @@
 [general]
 # Whether or not a cleanup should be performed when rdfl_exp finishes
 cleanup = True
+# Password for sudo commands, it is highly recommended to not fill this line. Instead, grant
+# passwordless sudo permission to rdfl_exp   adding a permission to /etc/sudoers.d
+# sudo_pwd = '
 
 # ===== Logging ===========================================================================
 
