refactor: refactor analysis
This commit changes how all the analysis steps are performed. It introduces an analyser class which look at the data, add them to the database and outputs datasets. This change is also made to support the new change in the fuzzer (remove of database logging).

[+] Add driver for the fuzzer
[+] Add log_parser.py and onos_log_parser.py
[+] Add temporary feature to store the log traces

[~] Change some behaviours in database.py to get access to cursor and ensure everything is properly closed on disconnection

[~] Update experimenter.py to use new analyzer
[~] Update main.py to use new analyzer
[~] Update onos_2node_1ping.py to use the new fuzzer driver
[~] Update onos-env and onos-gen-config for permissions and programming conventions
[~] Update rdfl_exp.cfg

[-] Remove machine_learning/data.py
[-] Remove experiment/data.py

--- a/etc/rdfl_exp.cfg
+++ b/etc/rdfl_exp.cfg
@@ -8,8 +8,8 @@
 # Whether or not a cleanup should be performed when rdfl_exp finishes
 cleanup = True
 # Password for sudo commands, it is highly recommended to not fill this line. Instead, grant
-# passwordless sudo permission to rdfl_exp   adding a permission to /etc/sudoers.d
-# sudo_pwd = '
+# password-less sudo permission to rdfl_exp   adding a permission to /etc/sudoers.d
+# sudo_pwd = ''
 
 # ===== Logging ===========================================================================
 
@@ -35,9 +35,11 @@ level = TRACE
 # Port to connect to the fuzzer
 port = 52525
 # Location of the fuzzer instruction file
-instr_path = /etc/packetfuzzer/fuzzer_instr.json
+instr_path = ~/.local/share/rdfl_exp/fuzzer_instr.json
 # Location of the Fuzzer jar file
-jar_path = /home/ubuntu/cff/out/artifacts/PacketFuzzer_jar/PacketFuzzer.jar
+jar_path = ~/cff/out/artifacts/PacketFuzzer_jar/PacketFuzzer.jar
+# Location of the Fuzzer output file
+out_path = ~/.local/share/rdfl_exp/fuzz_report.json
 
 # ===== SDN Controllers ====================================================================
 
