--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ mysqlclient~=2.0.3
 numpy>=1.22.0
 pandas~=1.2.4
 pexpect~=4.8.0
+PyPika~=0.48.8
 python-javabridge>=4.0.0
 python-weka-wrapper3>=0.2.5
 setuptools~=57.0.0
