feat: add installation script
This commit add an installation script that automatically perform some configuration and installations on the machine

[+] Add bin/rdfl_exp-install
[~] Update style of some files
[~] Update .gitignore

--- a/etc/rdfl_exp.cfg
+++ b/etc/rdfl_exp.cfg
@@ -1,17 +1,16 @@
-###########################################################################################
-# Default configuration file for RDFL_EXP Fuzzer.                                         #
-###########################################################################################
-
-# ===== Logging ===========================================================================
+################################################################################
+# Default configuration file for RDFL_EXP Fuzzer.                              #
+################################################################################
 
 [general]
 # Whether or not a cleanup should be performed when rdfl_exp finishes
 cleanup = True
-# Password for sudo commands, it is highly recommended to not fill this line. Instead, grant
-# password-less sudo permission to rdfl_exp   adding a permission to /etc/sudoers.d
+# Password for sudo commands, it is highly recommended to not fill this line.
+# Instead, grant password-less sudo permission to rdfl_exp by adding permission
+# to /etc/sudoers.d to the c
 # sudo_pwd = ''
 
-# ===== Logging ===========================================================================
+# ===== Logging ================================================================
 
 [logging]
 # Name of the used by the log file
@@ -29,7 +28,7 @@ filename = rdfl_exp.log
 # - ERROR: Logs only the error messages.
 level = TRACE
 
-# ===== Fuzzer ====================================================================
+# ===== Fuzzer =================================================================
 
 [fuzzer]
 # Port to connect to the fuzzer
@@ -41,7 +40,7 @@ jar_path = ~/cff/out/artifacts/PacketFuzzer_jar/PacketFuzzer.jar
 # Location of the Fuzzer output file
 out_path = ~/.local/share/rdfl_exp/fuzz_report.json
 
-# ===== SDN Controllers ====================================================================
+# ===== SDN Controllers ========================================================
 
 [onos]
 # Location of the root directory of onos
@@ -50,7 +49,7 @@ root_dir = /opt/onos
 karaf_password = karaf
 # IP address used by the controller
 host = 127.0.0.1
- # Port used by the SDN switches. Default to "6653"
+# Port used by the SDN switches. Default to "6653"
 port = 6653
 # Port used to connect to the Northbound API. Default to "8181"
 rest_port = 8181
@@ -69,7 +68,7 @@ host = 127.0.0.1
  # Port used by the SDN switches. Default to "6653"
 port = 6653
 
-# ===== MySQL Database ======================================================================
+# ===== MySQL Database =========================================================
 
 [mysql]
 # Host of the MySQL server
