--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-### Python template
+### OS X Related
+.DS_Store
+
+### JetBrains IDE Related
+# User-specific stuff
+.idea
+
+### Python Related
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
 
 # Distribution / packaging
 .Python
@@ -23,36 +25,17 @@ var/
 wheels/
 share/python-wheels/
 *.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
 
 # Unit test / coverage reports
 htmlcov/
 .tox/
 .nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
 .hypothesis/
 .pytest_cache/
 cover/
 
-# Translations
-*.mo
-*.pot
 
 # Environments
-.env
-.venv
 env/
 venv/
 ENV/
