!refactor: move all application paths in their own separate module
This commit moves all the application paths in their own "common.app_path" module. It also modifies some of them to fit the requirements of XDG base directory.

+ Add common.app_path

~ Fix issue where common.openflow.v0x05.error has not been added to git in previous commits

--- a/etc/rdfl_exp.cfg
+++ b/etc/rdfl_exp.cfg
@@ -1,5 +1,5 @@
 ################################################################################
-# Default configuration file for RDFL_EXP Fuzzer.                              #
+# Configuration file for RDFL_EXP application.                                 #
 ################################################################################
 
 [general]
@@ -13,8 +13,8 @@ cleanup = True
 # ===== Logging ================================================================
 
 [logging]
-# Name of the used by the log file
-filename = rdfl_exp.log
+# Prefix to use
+# prefix = rdfl_exp
 
 # Log level of the logfile. Default to "INFO".
 # Level of error at which the log should be written. Default value is INFO.
@@ -26,7 +26,7 @@ filename = rdfl_exp.log
 # - INFO:  Standard log information.
 # - WARN:  Logs only error and warning messages.
 # - ERROR: Logs only the error messages.
-level = TRACE
+level = DEBUG
 
 # ===== Fuzzer =================================================================
 
