!refactor: rename tool to figsdn

--- a/etc/figsdn.cfg
+++ b/etc/figsdn.cfg
@@ -1,12 +1,12 @@
 ################################################################################
-# Configuration file for RDFL_EXP application.                                 #
+# Configuration file for FIGSDN application.                                 #
 ################################################################################
 
 [general]
-# Whether or not a cleanup should be performed when rdfl_exp finishes
+# Whether or not a cleanup should be performed when FIGSDN finishes
 cleanup = True
 # Password for sudo commands, it is highly recommended to not fill this line.
-# Instead, grant password-less sudo permission to rdfl_exp by adding permission
+# Instead, grant password-less sudo permission to FIGSDN by adding permission
 # to /etc/sudoers.d to the c
 # sudo_pwd = ''
 
@@ -14,7 +14,7 @@ cleanup = True
 
 [logging]
 # Prefix to use
-# prefix = rdfl_exp
+# prefix = figsdn
 
 # Log level of the logfile. Default to "INFO".
 # Level of error at which the log should be written. Default value is INFO.
@@ -34,11 +34,11 @@ level = DEBUG
 # Port to connect to the fuzzer
 port = 52525
 # Location of the fuzzer instruction file
-instr_path = ~/.local/share/rdfl_exp/fuzzer_instr.json
+instr_path = ~/.local/share/figsdn/fuzzer_instr.json
 # Location of the Fuzzer jar file
 jar_path = ~/cff/out/artifacts/PacketFuzzer_jar/PacketFuzzer.jar
 # Location of the Fuzzer output file
-out_path = ~/.local/share/rdfl_exp/fuzz_report.json
+out_path = ~/.local/share/figsdn/fuzz_report.json
 
 # ===== SDN Controllers ========================================================
 
@@ -76,6 +76,6 @@ host = 127.0.0.1
 # Port used by MySQL server
 port = 3306
 # Username to be used by the application
-user = rdfl_exp
+user = figsdn
 # Password to be used by the application. Default to rocks
-password = rdfl_exp
+password = figsdn
