feat: add new arguments and features to figsdn-report
generic changes:
    ~ Update requirement.txt

changes in figsdn:
    ~ rename variable __framework__ to __app_name__
    ~ Bump version to 0.5.0

changes in figsdn_report:
    + Add arguments --version
    + Add argument for command 'get-expt' that allows not re-downloading existing dataset and models for an experiment
    + Add command to test the results of an experiment on a test dataset (previously hardcoded)
    + Add separate version for figsdn-report
    + Add plot of Average rule usage accuracy per iteration graphic

    ~ Change functions in figsdn_report/experiment.py to automatically fetch the experiment path.
    ~ Move function to fetch experiment files from figsdn_report/nodes.py to figsdn_report/experiment.py
    ~ Bump version of figsdn-report to 0.1.0

changes in common:
    ~ fix issue in metrics.py where a type was used for hinting. This caused issues with python version 3.8

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,21 @@
 appdirs~=1.4.4
+configparser~=5.2.0
 gower~=0.0.5
 iteround~=1.0.3
 liac-arff>=2.5.0
 matplotlib~=3.4.2
 mininet~=2.3.0.dev6
 mysqlclient~=2.0.3
+networkx~=2.8
 numpy>=1.22.0
 pandas~=1.2.4
+paramiko~=2.7.2
 pexpect~=4.8.0
 PyPika~=0.48.8
 python-javabridge>=4.0.0
 python-weka-wrapper3>=0.2.5
+seaborn~=0.11.1
 setuptools~=57.0.0
 sympy~=1.8
-z3-solver>=4.8.12.0
-configparser~=5.2.0
-networkx~=2.8
 tabulate~=0.8.9
-paramiko~=2.7.2
+z3-solver>=4.8.12.0
