--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ python-javabridge>=4.0.0
 python-weka-wrapper3>=0.2.5
 seaborn~=0.11.1
 setuptools~=57.0.0
+scipy>=1.6.3
 sympy~=1.8
 tabulate~=0.8.9
 z3-solver>=4.8.12.0
