chores: perform some chores before version bump
+ Add a draft README.md
~ Bump the version number
~ Update figsdn.cfg
~ Move and update the pre-install script

--- a/etc/figsdn.cfg
+++ b/etc/figsdn.cfg
@@ -34,9 +34,9 @@ level = DEBUG
 # Port to connect to the fuzzer
 port = 52525
 # Location of the fuzzer instruction file
-instr_path = ~/.local/share/figsdn/fuzzer_instr.json
+instr_path = ~/.config/figsdn/fuzzer_instr.json
 # Location of the Fuzzer jar file
-jar_path = ~/cff/out/artifacts/PacketFuzzer_jar/PacketFuzzer.jar
+jar_path = ~/.local/lib/figsdn/figsdn-fuzzer.jar
 # Location of the Fuzzer output file
 out_path = ~/.local/share/figsdn/fuzz_report.json
 
