refactor: update mysqlclient library to mysql-connector-python for licensing purposes.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ iteround~=1.0.3
 liac-arff>=2.5.0
 matplotlib~=3.4.2
 mininet~=2.3.0.dev6
-mysqlclient~=2.0.3
+mysql-connector-python~=8.0.31
 networkx~=2.8
 numpy>=1.22.0
 pandas~=1.2.4
