feat: add a Makefile recipe for FuzzSDN build process
This commit introduces a Makefile recipe to streamline the building process for FuzzSDN. Key changes include:

- Relocated pre-install.sh to the script folder for better organization.
- Introduced deployment scripts.
- Added a launch script.
- Updated the fuzzer pom.xml to enable the shaded building of the jar target.
- Created a VERSION file to track the software version.

--- a/src/fuzzsdn-fuzzer/pom.xml
+++ b/src/fuzzsdn-fuzzer/pom.xml
@@ -6,13 +6,13 @@
 
     <groupId>edu.svv.fuzzsdn</groupId>
     <artifactId>fuzzsdn-fuzzer</artifactId>
-    <version>1.0</version>
+    <version>0.7.0</version>
     <name>fuzzsdn-fuzzer</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -153,75 +153,44 @@
     </dependencies>
 
     <build>
-        <pluginManagement>
-            <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-            <plugins>
-                <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
-                <plugin>
-                    <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.1.0</version>
-                </plugin>
-                <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-                <plugin>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.0.2</version>
-                </plugin>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
 
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.0</version>
-                    <configuration>
-                        <source>11</source>
-                        <target>11</target>
-                    </configuration>
-                </plugin>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+        </testResources>
 
-                <plugin>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.1</version>
-                </plugin>
-
-                <!-- Build an executable JAR -->
-                <plugin>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.1.0</version>
-                    <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>edu.svv.fuzzsdn.fuzzer.App</mainClass>
-                        </manifest>
-                    </archive>
+        <!-- Maven Shade Plugin -->
+        <!-- https://maven.apache.org/plugins/maven-shade-plugin/ -->
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.5.0</version>
+                <configuration>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
                 </configuration>
-                </plugin>
-
-                <!-- Embed all the Dependencies in another JAR when running the mvn assembly command -->
-                <plugin>
-                    <artifactId>maven-assembly-plugin</artifactId>
-                    <executions>
-                        <execution>
-                            <phase>package</phase>
-                            <goals>
-                                <goal>single</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <descriptorRefs>
-                            <descriptorRef>jar-with-dependencies</descriptorRef>
-                        </descriptorRefs>
-                        <appendAssemblyId>true</appendAssemblyId>
-                        <archive>
-                          <manifest>
-                            <mainClass>edu.svv.fuzzsdn.fuzzer.App</mainClass>
-                          </manifest>
-                        </archive>
-                    </configuration>
-                </plugin>
-
-            </plugins>
-        </pluginManagement>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>edu.svv.fuzzsdn.fuzzer.App</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 </project>
